E2J/part4/t42.output
running e2j
compiling the Java generated code
My_e2j.java:21: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
1 error
